examples/fail/opt.xyz
5
Properties=species:S:1:pos:R:3 energy=-175.58714 dipole="-0.1278313213367202 -0.2766902704503276 0.0622501059929631" pbc="F F F"
C        0.11255380       1.79952888       0.02699122
H       -0.75334228       1.32452361      -0.36597467
H        0.48672537       1.02755254       0.76239524
H       -0.64171321      -1.54430923       0.51585985
H       -0.69428369      -1.23462937      -0.15742944
